--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title> Baymax </title>
 </head>
 <body>
-         <img src="images/ALL-big-hero.gif" alt="ALL big hero">
+         <img src="images/All-big-hero.gif" alt="ALL big hero">
 		 <img src="images/Baymax-and-Hiro.gif" alt="Baymax and Hiro"> 
 			
 			<img src="images/big_hero_all.gif" alt="big-hero all">
