--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <hr>
 		  <h1><font color="red">Big Hero 6 / Місто Героїв</font></h1>
 		  <hr>
-		  <h2><font color="brown">Про фільм </font> </h2><p>«Місто героїв»(англ. Big Hero 6; букв. Укр. Велика шістка героїв) - американський трьохвимірний комп'ютерний повнометражний анімаційний фільм 2014 року, створений студією <b>"Walt Disney Animation Studions"</b>  і випущений кінокомпанією<a href="https;//www.disneyinternational.com/"title="main page"> <b>"Walt Disney Pictures"</b> </a>  Заснований на однойменних персонажах коміксів видавництва <a href="https://www/marvel.com/"><b>Marvel</b></a>, але, незважаючи на це, істотно відрізняється
+		  <h2><font color="brown">Про фільм </font> </h2><p>«Місто героїв»(англ. Big Hero 6; букв. Укр. Велика шістка героїв) - американський трьохвимірний комп'ютерний повнометражний анімаційний фільм 2014 року, створений студією <b>"Walt Disney Animation Studions"</b>  і випущений кінокомпанією<a href="https://www.disneyinternational.com/"title="main page"> <b>"Walt Disney Pictures"</b> </a>  Заснований на однойменних персонажах коміксів видавництва <a href="https://www.marvel.com/"><b>Marvel</b></a>, але, незважаючи на це, істотно відрізняється
 від першоджерела. Режисери - Дон Холл і Кріс Вільямс. Фільм удостоївся премії <b>«Оскар»</b> як кращий анімаційний повнометражний фільм. </p>
 
 </body>
